--- a/v7/appcompat/res/values/attrs.xml
+++ b/v7/appcompat/res/values/attrs.xml
@@ -31,6 +31,7 @@
     <declare-styleable name="ActionBarWindow">
         <attr name="windowActionBar" format="boolean"/>
         <attr name="windowActionBarOverlay" format="boolean"/>
+        <attr name="windowSplitActionBar" format="boolean" />
     </declare-styleable>
 
     <!-- ============================================ -->
