--- a/v7/appcompat/res/layout/action_bar_decor_overlay.xml
+++ b/v7/appcompat/res/layout/action_bar_decor_overlay.xml
@@ -14,7 +14,7 @@
      limitations under the License.
 -->
 
-<android.support.appcompat.widget.ActionBarOverlayLayout
+<android.support.v7.internal.widget.ActionBarOverlayLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/action_bar_overlay_layout"
         android:layout_width="fill_parent"
@@ -26,34 +26,34 @@
                   android:layout_width="fill_parent"
                   android:layout_height="wrap_content"
                   android:layout_gravity="top">
-        <android.support.appcompat.widget.ActionBarContainer android:id="@+id/action_bar_container"
+        <android.support.v7.internal.widget.ActionBarContainer android:id="@+id/action_bar_container"
                                                              android:layout_width="fill_parent"
                                                              android:layout_height="wrap_content"
                                                              android:layout_alignParentTop="true"
                                                              style="?attr/actionBarStyle"
                                                              android:gravity="top">
-            <android.support.appcompat.widget.ActionBarView
+            <android.support.v7.internal.widget.ActionBarView
                     android:id="@+id/action_bar"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     style="?attr/actionBarStyle"/>
-            <android.support.appcompat.widget.ActionBarContextView
+            <android.support.v7.internal.widget.ActionBarContextView
                     android:id="@+id/action_context_bar"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:visibility="gone"
                     style="?attr/actionModeStyle"/>
-        </android.support.appcompat.widget.ActionBarContainer>
+        </android.support.v7.internal.widget.ActionBarContainer>
         <ImageView android:src="?android:attr/windowContentOverlay"
                    android:scaleType="fitXY"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"/>
     </LinearLayout>
-    <android.support.appcompat.widget.ActionBarContainer android:id="@+id/split_action_bar"
+    <android.support.v7.internal.widget.ActionBarContainer android:id="@+id/split_action_bar"
                                                          android:layout_width="fill_parent"
                                                          android:layout_height="wrap_content"
                                                          android:layout_gravity="bottom"
                                                          style="?attr/actionBarSplitStyle"
                                                          android:visibility="gone"
                                                          android:gravity="center"/>
-</android.support.appcompat.widget.ActionBarOverlayLayout>
+</android.support.v7.internal.widget.ActionBarOverlayLayout>
