--- a/v7/appcompat/res/layout/action_bar_home.xml
+++ b/v7/appcompat/res/layout/action_bar_home.xml
@@ -15,7 +15,7 @@
 -->
 
 <view xmlns:android="http://schemas.android.com/apk/res/android"
-      class="android.support.appcompat.widget.ActionBarView$HomeView"
+      class="android.support.v7.internal.widget.ActionBarView$HomeView"
       android:layout_width="wrap_content"
       android:layout_height="fill_parent"
       android:background="?attr/actionBarItemBackground">
