--- a/v7/appcompat/res/layout/action_bar_tab.xml
+++ b/v7/appcompat/res/layout/action_bar_tab.xml
@@ -15,7 +15,7 @@ limitations under the License.
 -->
 
 <view xmlns:android="http://schemas.android.com/apk/res/android"
-      class="android.support.appcompat.widget.ScrollingTabContainerView$TabView"
+      class="android.support.v7.internal.widget.ScrollingTabContainerView$TabView"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       style="?attr/actionBarTabStyle"/>
