--- a/v7/appcompat/res/layout/action_menu_item_layout.xml
+++ b/v7/appcompat/res/layout/action_menu_item_layout.xml
@@ -14,7 +14,7 @@
      limitations under the License.
 -->
 
-<android.support.appcompat.view.menu.ActionMenuItemView
+<android.support.v7.internal.view.menu.ActionMenuItemView
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
