--- a/v7/appcompat/res/layout/action_menu_layout.xml
+++ b/v7/appcompat/res/layout/action_menu_layout.xml
@@ -14,7 +14,7 @@
      limitations under the License.
 -->
 
-<android.support.appcompat.view.menu.ActionMenuView
+<android.support.v7.internal.view.menu.ActionMenuView
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="wrap_content"
