--- a/v7/appcompat/res/layout/action_mode_bar.xml
+++ b/v7/appcompat/res/layout/action_mode_bar.xml
@@ -16,7 +16,7 @@
 ** limitations under the License.
 */
 -->
-<android.support.appcompat.widget.ActionBarContextView
+<android.support.v7.internal.widget.ActionBarContextView
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
