--- a/v7/appcompat/res/layout/expanded_menu_layout.xml
+++ b/v7/appcompat/res/layout/expanded_menu_layout.xml
@@ -14,7 +14,8 @@
      limitations under the License.
 -->
 
-<android.support.appcompat.view.menu.ExpandedMenuView xmlns:android="http://schemas.android.com/apk/res/android"
-                                                 android:id="@+id/expanded_menu"
-                                                 android:layout_width="?attr/panelMenuListWidth"
-                                                 android:layout_height="wrap_content" />
+<android.support.v7.internal.view.menu.ExpandedMenuView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/expanded_menu"
+        android:layout_width="?attr/panelMenuListWidth"
+        android:layout_height="wrap_content"/>
