--- a/v7/appcompat/res/layout/list_menu_item_layout.xml
+++ b/v7/appcompat/res/layout/list_menu_item_layout.xml
@@ -14,7 +14,7 @@
      limitations under the License.
 -->
 
-<android.support.appcompat.view.menu.ListMenuItemView
+<android.support.v7.internal.view.menu.ListMenuItemView
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="?attr/listPreferredItemHeightSmall">
@@ -55,4 +55,4 @@
 
     <!-- Checkbox, and/or radio button will be inserted here. -->
 
-</android.support.appcompat.view.menu.ListMenuItemView>
+</android.support.v7.internal.view.menu.ListMenuItemView>
