Expose support version of contextual Action Bar
This commit exposes the contextual Action Bar
to developers:

- More drawables imported (sigh).
- Using standard ActionButton style for Close button,
  didn't see the point of adding yet more drawables
- Moved ActionMode.java out of internal
- Added ActionModeWrapper for HC+
- Added onBackPressed support
- Added relevant callbacks to ActionBarActivity

Change-Id: I02996621e810db6875c86cc5965ecac769459c16
Signed-off-by: Chris Banes <chrisbanes@google.com>

--- a/v7/appcompat/res/values-v14/styles_base.xml
+++ b/v7/appcompat/res/values-v14/styles_base.xml
@@ -75,6 +75,14 @@
            parent="android:Widget.Holo.Light.ActionButton">
     </style>
 
+    <style name="Widget.AppCompat.Base.ActionButton.CloseMode"
+           parent="android:Widget.Holo.ActionButton.CloseMode">
+    </style>
+
+    <style name="Widget.AppCompat.Light.Base.ActionButton.CloseMode"
+           parent="android:Widget.Holo.Light.ActionButton.CloseMode">
+    </style>
+
     <style name="Widget.AppCompat.Base.ActionButton.Overflow"
            parent="android:Widget.Holo.ActionButton.Overflow">
     </style>
