Fix List Menu Text Colour
This commit fixes a few things around the text
colour on the list menu:

- Combats against <v9 and v9-10 different panel
   backgrounds. We now use TextAppearance.Widget.IconMenu.Item
   as the base theme and increase text size.
- Fix Sub Menu text colour by using primary_text_light
   instead of attr text colours (as the bg is always light
   <v11).

Change-Id: I27bc6090ce4e5f428482a0a55d842647d49b8d9f
Signed-off-by: Chris Banes <chrisbanes@google.com>

--- a/v7/appcompat/res/values/styles_base.xml
+++ b/v7/appcompat/res/values/styles_base.xml
@@ -276,5 +276,16 @@
         <item name="android:textColor">?android:attr/textColorPrimaryDisableOnly</item>
     </style>
 
+    <style name="TextAppearance.Widget.AppCompat.Base.ExpandedMenu.Item"
+           parent="android:TextAppearance.Widget.IconMenu.Item">
+        <item name="android:textSize">18sp</item>
+    </style>
+
+    <!-- Mimic text appearance in select_dialog_item.xml -->
+    <style name="TextAppearance.AppCompat.Base.CompactMenu.Dialog"
+           parent="android:TextAppearance.Medium">
+        <item name="android:textColor">@android:color/primary_text_light</item>
+    </style>
+
 
 </resources>
