--- a/v7/appcompat/res/values/styles.xml
+++ b/v7/appcompat/res/values/styles.xml
@@ -173,4 +173,8 @@
            parent="Widget.AppCompat.Light.Base.ListView.DropDown">
     </style>
 
+    <style name="TextAppearance.Widget.AppCompat.ExpandedMenu.Item"
+           parent="TextAppearance.Widget.AppCompat.Base.ExpandedMenu.Item">
+    </style>
+
 </resources>
