--- a/v7/appcompat/res/values-v14/styles_base.xml
+++ b/v7/appcompat/res/values-v14/styles_base.xml
@@ -134,39 +134,39 @@
            parent="android:Widget.Holo.Light.ActionMode.Inverse">
     </style>
 
-    <style name="TextAppearance.AppCompat.Base.Widget.ActionBar.Menu"
+    <style name="TextAppearance.AppCompat.Widget.Base.ActionBar.Menu"
            parent="android:TextAppearance.Holo.Widget.ActionBar.Menu">
     </style>
 
-    <style name="TextAppearance.AppCompat.Base.ActionBar.Title"
+    <style name="TextAppearance.AppCompat.Widget.Base.ActionBar.Title"
            parent="android:TextAppearance.Holo.Widget.ActionBar.Title">
     </style>
 
-    <style name="TextAppearance.AppCompat.Base.ActionBar.Subtitle"
+    <style name="TextAppearance.AppCompat.Widget.Base.ActionBar.Subtitle"
            parent="android:TextAppearance.Holo.Widget.ActionBar.Subtitle">
     </style>
 
-    <style name="TextAppearance.AppCompat.Base.ActionBar.Title.Inverse"
+    <style name="TextAppearance.AppCompat.Widget.Base.ActionBar.Title.Inverse"
            parent="android:TextAppearance.Holo.Widget.ActionBar.Title.Inverse">
     </style>
 
-    <style name="TextAppearance.AppCompat.Base.ActionBar.Subtitle.Inverse"
+    <style name="TextAppearance.AppCompat.Widget.Base.ActionBar.Subtitle.Inverse"
            parent="android:TextAppearance.Holo.Widget.ActionBar.Subtitle.Inverse">
     </style>
 
-    <style name="TextAppearance.AppCompat.Base.ActionMode.Title"
+    <style name="TextAppearance.AppCompat.Widget.Base.ActionMode.Title"
            parent="android:TextAppearance.Holo.Widget.ActionMode.Title">
     </style>
 
-    <style name="TextAppearance.AppCompat.Base.ActionMode.Subtitle"
+    <style name="TextAppearance.AppCompat.Widget.Base.ActionMode.Subtitle"
            parent="android:TextAppearance.Holo.Widget.ActionMode.Subtitle">
     </style>
 
-    <style name="TextAppearance.AppCompat.Base.ActionMode.Title.Inverse"
+    <style name="TextAppearance.AppCompat.Widget.Base.ActionMode.Title.Inverse"
            parent="android:TextAppearance.Holo.Widget.ActionMode.Title.Inverse">
     </style>
 
-    <style name="TextAppearance.AppCompat.Base.ActionMode.Subtitle.Inverse"
+    <style name="TextAppearance.AppCompat.Widget.Base.ActionMode.Subtitle.Inverse"
            parent="android:TextAppearance.Holo.Widget.ActionMode.Subtitle.Inverse">
     </style>
 
