Add Progress Bar support to Action Bar
This commit adds support for displaying a progress
bar on the action:
- Support version of Activity.setProgress* have been
  added to ActionBarActivity
- We use the platform's ProgressBar styles, so remove
  the now unused drawable.
- As a bit of tidy-up, I renamed the internal version
  of requestWindowFeature to match the public name.
- Added ICS version of ProgressBar.java. This was
  was needed as ICS added a constructor which we
  need.

Change-Id: I865fb3bc3039b30b9f784e1e7e8f5d8d9b5744d3
Signed-off-by: Chris Banes <chrisbanes@google.com>

--- a/v7/appcompat/res/values-v14/styles_base.xml
+++ b/v7/appcompat/res/values-v14/styles_base.xml
@@ -174,8 +174,8 @@
            parent="android:Widget.Holo.ProgressBar.Horizontal">
     </style>
 
-    <style name="Widget.AppCompat.Base.ProgressBar.Small"
-           parent="android:Widget.Holo.ProgressBar.Small">
+    <style name="Widget.AppCompat.Base.ProgressBar"
+           parent="android:Widget.Holo.ProgressBar">
     </style>
 
 </resources>
