--- a/v7/appcompat/res/values/attrs.xml
+++ b/v7/appcompat/res/values/attrs.xml
@@ -202,7 +202,6 @@
         <attr name="android:layout_gravity"/>
     </declare-styleable>
 
-    <!-- TODO(trevorjohns): Write docs for this. -->
     <declare-styleable name="ActionMenuItemView">
         <attr name="android:minWidth"/>
     </declare-styleable>
@@ -260,7 +259,6 @@
 
     <!-- These are the standard attributes that make up a complete theme. -->
     <declare-styleable name="Theme">
-        <!-- TODO(trevorjohns): Add other attributes! -->
         <!-- Default ActionBar dropdown style. -->
         <attr name="actionDropDownStyle" format="reference"/>
         <!-- The preferred item height for dropdown lists. -->
@@ -273,6 +271,7 @@
         <!-- ============ -->
         <eat-comment />
 
+        <!-- Default Panel Menu width. -->
         <attr name="panelMenuListWidth" format="dimension" />
 
         <!-- Default Panel Menu style. -->
